--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/java-library"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-17.0.1">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/java-library"/>
 	<classpathentry kind="lib" path="libs/JDA.jar" sourcepath="libs/JDA-sources.jar"/>
 	<classpathentry kind="lib" path="libs/JDA-WH.jar" sourcepath="libs/JDA-WH-sources.jar"/>
+	<classpathentry kind="lib" path="libs/jar_files.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
